<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingBottom="16dp"
    >

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/header"
        style="@style/text_h1"
        android:text="@string/signin_header1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text1"
        style="@style/text_usability"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signin_header2"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintLeft_toLeftOf="@id/header"
        android:layout_marginTop="95dp"
        />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:layout_constraintTop_toBottomOf="@id/text1"
        app:layout_constraintLeft_toLeftOf="@id/header"
        app:layout_constraintRight_toRightOf="@id/header"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/et_purple_background"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/start_number"
        style="@style/text_usability"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signin_textview_prefix"
        app:layout_constraintLeft_toLeftOf="@id/background"
        app:layout_constraintTop_toTopOf="@id/background"
        app:layout_constraintBottom_toBottomOf="@id/background"
        android:layout_marginStart="16dp"
        />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_phone"
        style="@style/text_usability"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@id/start_number"
        app:layout_constraintLeft_toRightOf="@id/start_number"
        app:layout_constraintRight_toRightOf="@id/background"
        android:paddingStart="10dp"
        android:paddingVertical="13dp"
        android:hint="@string/signin_phone_hint"
        android:inputType="phone"
        android:background="@color/transparent"
        android:textColorHint="@color/deep_blue"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_confidential"
        style="@style/text_content_sfp"
        tools:text="@string/signin_span_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/background"
        app:layout_constraintRight_toRightOf="@id/background"
        app:layout_constraintTop_toBottomOf="@id/background"
        android:layout_marginTop="16dp"
        android:clickable="true"
        />


    <com.google.android.material.textview.MaterialTextView
        style="@style/button_dark_big"
        android:background="@drawable/btn_dark"
        android:id="@+id/button_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/background"
        app:layout_constraintRight_toRightOf="@id/background"
        android:text="@string/signin_button_text"
        android:enabled="false"
        android:layout_marginBottom="0dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>