<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_bottomsheet">

    <TextView
        android:id="@+id/confidential_header"
        style="@style/text_h3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/header_confidential"/>

    <TextView
        android:id="@+id/confidential_header2"
        style="@style/text_header_sfp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/confidential_header"
        app:layout_constraintLeft_toLeftOf="@id/confidential_header"
        app:layout_constraintRight_toRightOf="@id/confidential_header"
        android:layout_marginTop="16dp"
        android:text="@string/confidential_header2"
        android:textFontWeight="600"/>

    <TextView
        android:id="@+id/confidential_content"
        style="@style/text_content_sfp_15"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/confidential_header2"
        app:layout_constraintLeft_toLeftOf="@id/confidential_header2"
        app:layout_constraintRight_toRightOf="@id/confidential_header2"
        android:layout_marginTop="8dp"
        android:text="@string/confidential_content1"
        />

    <TextView
        android:id="@+id/confidential_content2"
        style="@style/text_content_sfp_15"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/confidential_content"
        app:layout_constraintLeft_toLeftOf="@id/confidential_header2"
        app:layout_constraintRight_toRightOf="@id/confidential_header2"
        android:layout_marginTop="8dp"
        android:text="@string/confidential_content2"
        />

    <TextView
        android:id="@+id/confidential_content3"
        style="@style/text_content_sfp_15"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/confidential_content2"
        app:layout_constraintLeft_toLeftOf="@id/confidential_header2"
        app:layout_constraintRight_toRightOf="@id/confidential_header2"
        android:layout_marginTop="8dp"
        android:text="@string/confidential_content3"
        />

</androidx.constraintlayout.widget.ConstraintLayout>